traffic-weight/referencegrant.yaml
apiVersion:  gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference1 
  namespace: ns2 
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: ns1 
  to:
  - group: ""
    kind: Service
